# Cooperative-Path-Finding

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  instance_cleaner.py  instance_generator.py  instance_solver.py  simpleIDtest.cpf  simple_instance_generator.py  simple_instance_solver.py
8x8instances/: grid_08x08_a004_s012.cpf  grid_08x08_a004_s020.cpf  grid_08x08_a004_s026.cpf  grid_08x08_a004_s036.cpf  grid_08x08_a004_s039.cpf  grid_08x08_a004_s046.cpf  grid_08x08_a004_s051.cpf  grid_08x08_a004_s058.cpf  grid_08x08_a004_s062.cpf  grid_08x08_a004_s072.cpf  grid_08x08_a004_s083.cpf  grid_08x08_a004_s097.cpf  grid_08x08_a004_s100.cpf  grid_08x08_a004_s112.cpf  grid_08x08_a004_s129.cpf  grid_08x08_a004_s142.cpf  grid_08x08_a004_s155.cpf  grid_08x08_a004_s169.cpf  grid_08x08_a004_s181.cpf  grid_08x08_a004_s187.cpf  grid_08x08_a004_s203.cpf  grid_08x08_a004_s207.cpf  grid_08x08_a004_s218.cpf  grid_08x08_a004_s246.cpf  grid_08x08_a004_s247.cpf  grid_08x08_a004_s250.cpf  grid_08x08_a004_s251.cpf  grid_08x08_a004_s257.cpf  grid_08x08_a004_s266.cpf  grid_08x08_a004_s283.cpf  grid_08x08_a004_s293.cpf  grid_08x08_a004_s296.cpf  grid_08x08_a004_s303.cpf  grid_08x08_a004_s309.cpf  grid_08x08_a004_s336.cpf  grid_08x08_a004_s338.cpf  grid_08x08_a004_s348.cpf  grid_08x08_a004_s349.cpf  grid_08x08_a004_s365.cpf  grid_08x08_a004_s381.cpf  (+1264 more)
CPFSolver/: Makefile  a.out  bla.txt  out.txt  out2.txt  sol.txt  test.cpp
M_instances/: grid_16x16_a16_o0.1_s327.cpf  grid_16x16_a16_o0.1_s616.cpf  grid_16x16_a51_o0.1_s31.out  grid_16x16_a51_o0.1_s327.out  grid_16x16_a51_o0.1_s5.out  grid_16x16_a51_o0.1_s616.out  grid_16x16_a51_o0.1_s895.out  grid_16x16_a51_o0.3_s327.cpf  grid_16x16_a51_o0.4_s31.cpf  grid_16x16_a51_o0.4_s616.cpf  grid_16x16_a76_o0.1_s31.cpf  grid_16x16_a76_o0.1_s616.cpf  grid_32x32_a16_o0.1_s31.cpf  grid_32x32_a16_o0.1_s616.cpf  grid_32x32_a204_o0.1_s31.cpf  grid_32x32_a204_o0.1_s5.cpf  grid_32x32_a204_o0.2_s5.cpf  grid_32x32_a204_o0.3_s31.cpf  grid_32x32_a204_o0.3_s5.cpf  grid_32x32_a307_o0.2_s327.cpf  grid_32x32_a307_o0.2_s895.cpf  grid_32x32_a307_o0.3_s31.cpf  grid_32x32_a307_o0.3_s616.cpf  grid_32x32_a307_o0.3_s895.cpf  grid_32x32_a409_o0.3_s895.cpf  grid_32x32_a409_o0.4_s31.cpf  grid_32x32_a4_o0.1_s31.cpf  grid_32x32_a4_o0.1_s327.cpf  grid_32x32_a8_o0.1_s616.cpf  grid_4x4_a3_o0.1_s31.out  grid_4x4_a3_o0.1_s327.cpf  grid_4x4_a3_o0.1_s327.out  grid_4x4_a3_o0.1_s5.out  grid_4x4_a3_o0.1_s616.out  grid_4x4_a3_o0.1_s895.out  grid_4x4_a3_o0.2_s31.out  grid_4x4_a3_o0.2_s327.out  grid_4x4_a3_o0.2_s5.out  grid_4x4_a3_o0.2_s616.out  grid_4x4_a3_o0.2_s895.cpf  (+87 more)
code/: Makefile
(+17449 files in other folders)
